[package]
name = "mi"
version = "0.1.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
kankyo = "0.3"
color-eyre = "0.5.2"
log = "0.4"
hyper = "0.13"
mime = "0.3.0"
pretty_env_logger = "0"
prometheus = { version = "0.10", default-features = false, features = ["process"] }
rand = "0"
serde_dhall = "0.6.0"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"

jsonfeed = { git = "https://github.com/Xe/site" }

[build-dependencies]
ructe = { version = "0.12", features = ["warp02"] }
