[package]
name = "mi"
version = "1.0.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.5"
futures-io = "0.3"
hex = "0.4"
kankyo = "0.3"
log = "0.4"
mime = "0.3.0"
paseto = { version = "1.0", features = ["easy_tokens", "v2"] }
prometheus = { version = "0.10", default-features = false, features = ["process"] }
rand = "0"
ring = { version = "^0.16", features = ["std"] }
rocket = "0.4"
rocket_prometheus = "0.7.0"
rusty_ulid = "0.10"
serde_json = "^1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.2"
twapi-ureq = "0.1.5"
ureq = { version = "1", features = ["json", "charset"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
url = "2"

[dependencies.diesel]
version = "1"
features = ["sqlite", "r2d2", "uuidv07", "chrono"]

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "diesel_sqlite_pool", "uuid", "helmet"]