[package]
name = "mi"
version = "1.0.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama_rocket = "0.10"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.5"
diesel_migrations = "1"
futures-io = "0.3"
hex = "0.4"
log = "0.4"
mime = "0.3.0"
paseto = { version = "1.0", features = ["easy_tokens", "v2"] }
prometheus = { version = "0.10", default-features = false, features = ["process"] }
rand = "0"
readability-fork = { version = "0.2", default-features = false }
ring = { version = "^0.16", features = ["std"] }
rocket = "0.4"
rocket_cors = "0.5"
rocket_prometheus = "0.7.0"
rusty_ulid = "0.10"
scraper = "0.12.0"
sdnotify = { version = "0.1", default-features = false }
serde_json = "^1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.2"
twapi-ureq = "0.1.5"
ureq = { version = "1", features = ["json", "charset"] }
url = "2"

[dependencies.askama]
version = "0.10"
features = [ "with-rocket" ]

[dependencies.diesel]
version = "1"
features = ["sqlite", "r2d2", "chrono"]

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "diesel_sqlite_pool", "helmet", "serve"]

[profile.release]
lto = true