[package]
name = "mi-web"
version = "0.1.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-io = "0.3"
serde_json = "1"
ureq = { version = "2", features = ["json", "charset"] }
thiserror = "1"
